# mg-exchange-db

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PRODUCTION_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  labels.yml  pull_request_template.md
crates/core/: Cargo.toml
crates/core/benches/: storage.rs  storage_comprehensive.rs
crates/core/src/: async_io.rs  audit.rs  checkpoint.rs  checksum.rs  column.rs  column_version.rs  compression.rs  cursor.rs  dedup.rs  downsampling.rs  encryption.rs  engine.rs  health.rs  index_builder.rs  intern.rs  io_uring_reader.rs  lib.rs  matview.rs  meta_binary.rs  metering.rs  mmap.rs  mvcc.rs  o3.rs  partition.rs  partition_lock.rs  partition_mgmt.rs  pitr.rs  prefetch.rs  recovery.rs  resource.rs  retention.rs  rls.rs  scheduler.rs  simd.rs  simd_string.rs  snapshot.rs  sync.rs  table.rs  tenant.rs  ttl.rs  (+4 more)
crates/core/src/cluster/: mod.rs  node.rs  router.rs
crates/core/src/consensus/: coordinator.rs  mod.rs  raft.rs
crates/core/src/index/: bitmap.rs  mod.rs  symbol_column.rs  symbol_map.rs
crates/core/src/parquet/: apache_writer.rs  mod.rs  reader.rs  thrift.rs  writer.rs
crates/core/src/rbac/: mod.rs  model.rs  store.rs
crates/core/src/replication/: auto_failover.rs  config.rs  failover.rs  fencing.rs  health_monitor.rs  manager.rs  mod.rs  protocol.rs  s3_shipper.rs  wal_receiver.rs  wal_shipper.rs
crates/core/src/tiered/: mod.rs  object_store.rs  parquet.rs  partition_meta.rs  policy.rs  reader.rs
crates/core/src/wal/: event.rs  merge.rs  mod.rs  reader.rs  row_codec.rs  segment.rs  sequencer.rs  writer.rs
crates/core/tests/: chaos_comprehensive.rs  chaos_tests.rs  cluster_tests.rs  column_tests.rs  compression_tests.rs  concurrent_tests.rs  crash_recovery.rs  encryption_tests.rs  enterprise_stress.rs  failover_e2e.rs  final_enterprise_06.rs  final_storage_05.rs  g10_storage.rs  g11_enterprise.rs  index_tests.rs  lock_contention_profiling.rs  massive_enterprise.rs  massive_storage.rs  partition_tests.rs  production_checklist_tests.rs  property_tests.rs  rbac_tests.rs  recovery_comprehensive.rs  regression_enterprise.rs  regression_storage.rs  replication_e2e.rs  replication_fencing.rs  replication_tests.rs  stress_tests.rs  table_tests.rs  tenant_tests.rs  thread_safety.rs  txn_tests.rs  wal_tests.rs
crates/exchange/: Cargo.toml
crates/exchange/benches/: exchange.rs
crates/exchange/src/: lib.rs  market.rs  ohlcv.rs  orderbook.rs  tick.rs
crates/net/: Cargo.toml
crates/net/src/: auth.rs  auth_routes.rs  lib.rs  metrics.rs  oauth.rs  pool.rs  replication_server.rs  service_account.rs  session.rs  tls.rs
crates/net/src/console/: mod.rs
crates/net/src/http/: admin.rs  diagnostics.rs  export.rs  grafana.rs  handlers.rs  mod.rs  rate_limit.rs  response.rs
crates/net/src/ilp/: auth.rs  mod.rs  parser.rs  server.rs  udp.rs
crates/net/src/pgwire/: copy.rs  extended.rs  handler.rs  mod.rs
crates/net/src/ws/: handler.rs  mod.rs
crates/net/tests/: final_protocol_07.rs  fuzz_ilp.rs  grafana_integration.rs  http_tests.rs  ilp_comprehensive.rs  ilp_tests.rs  massive_protocol.rs  pgwire_comprehensive.rs  production_checklist_tests.rs  regression_protocols.rs  replication_streaming.rs
crates/query/: Cargo.toml
crates/query/benches/: queries.rs  query_comprehensive.rs
crates/query/src/: adaptive.rs  asof.rs  balance_functions.rs  batch.rs  casts.rs  catalog.rs  columnar.rs  compiled_filter.rs  context.rs  cursor_executor.rs  exchange_functions.rs  executor.rs  functions.rs  functions_compat.rs  functions_extra.rs  join.rs  latest.rs  latest_indexed.rs  lib.rs  memory.rs  optimizer.rs  parallel.rs  parallel_groupby.rs  parallel_sort.rs  parser.rs  pipeline.rs  plan.rs  plan_cache.rs  planner.rs  profiler.rs  record_cursor.rs  scalar.rs  sequence.rs  slow_log.rs  spill.rs  table_registry.rs  test_utils.rs  timeout.rs  value.rs  vector_groupby.rs  (+1 more)
crates/query/src/cursors/: advanced.rs  aggregate.rs  anti_join.rs  approximate_aggregate.rs  asof_join.rs  async_scan.rs  band_join.rs  broadcast_join.rs  buffer.rs  builder.rs  cache.rs  case_when.rs  coalesce.rs  column_scan.rs  concat.rs  constant.rs  count_only.rs  cross_join.rs  cube.rs  debug.rs  deferred_filter.rs  distinct.rs  empty.rs  except.rs  explain.rs  expression.rs  fill.rs  filter.rs  filtered_scan.rs  generate_series.rs  group_by_hash.rs  group_by_sorted.rs  hash_join.rs  having_filter.rs  incremental_aggregate.rs  index_join.rs  index_scan.rs  intersect.rs  latest_by.rs  limit.rs  (+37 more)
crates/query/tests/: advanced_sql_tests.rs  aggregate_comprehensive.rs  aggregate_function_tests.rs  basic.slt  boundary_tests.rs  bulk_string_tests.rs  conformance.rs  cursor_equivalence.rs  cursor_tests.rs  date_function_tests.rs  ddl_tests.rs  delete_tests.rs  edge_cases.rs  filter_comprehensive.rs  final_aggregate_03.rs  final_date_04.rs  final_scalar_01.rs  final_sql_02.rs  function_tests.rs  fuzz_tests.rs  g01_length.rs  g02_upper_lower.rs  g03_math_basic.rs  g04_math_trig.rs  g05_dates.rs  g06_aggregates.rs  g07_sql_count.rs  g08_sql_where.rs  g09_sql_group.rs  insert_tests.rs  join_tests.rs  massive_aggregate.rs  massive_functions_date.rs  massive_functions_math.rs  massive_functions_str.rs  massive_select.rs  math_function_tests.rs  memory_tests.rs  missing_features_tests.rs  operators_f64.rs  (+35 more)
crates/server/: Cargo.toml
crates/server/benches/: e2e.rs  tsbs.rs
crates/server/src/: bench.rs  bench_report.rs  config.rs  load_test.rs  log_rotation.rs  main.rs  profile_query.rs  reference_config.toml  tsbs.rs
crates/server/tests/: e2e_server.rs
docs/: API_REFERENCE.md  CLI_REFERENCE.md  CONFIGURATION_COMPLETE.md  DATA_TYPES.md  FUNCTIONS_REFERENCE.md  GETTING_STARTED.md  INGESTION.md  MIGRATION_FROM_QUESTDB.md  OPERATIONS.md  README.md  REPLICATION.md  SECURITY.md  SQL_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ilp_parser.rs  sql_parser.rs  wal_codec.rs
(+34 files in other folders)
