[package]
name = "exchange-core"
version.workspace = true
edition.workspace = true

[dependencies]
exchange-common = { workspace = true }
memmap2 = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
fs2 = { workspace = true }
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
lz4_flex = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
ureq = { workspace = true }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "storage_comprehensive"
harness = false
