[package]
name = "exchange-exchange"
version.workspace = true
edition.workspace = true

[dependencies]
exchange-common = { workspace = true }
exchange-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "exchange"
harness = false
