[package]
name = "exchange-net"
version.workspace = true
edition.workspace = true

[dependencies]
exchange-common = { workspace = true }
exchange-core = { workspace = true }
exchange-query = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-util = { workspace = true }
bytes = "1"
dashmap = { workspace = true }
pgwire = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
tower = { version = "0.5", features = ["util"] }
