[package]
name = "exchange-query"
version.workspace = true
edition.workspace = true

[dependencies]
exchange-common = { workspace = true }
exchange-core = { workspace = true }
exchange-exchange = { workspace = true }
sqlparser = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "query_comprehensive"
harness = false
